# kaggle-competition-CNN-Cancer-Detection

./: .gitignore  README.md  kaggle.ipynb  notebook.ipynb  pyproject.toml  submission.csv
.kaggle/: kaggle.json
