[project]
name = "kaggle-competition-CNN-Cancer-Detection"
version = "0.1.0"
description = "CNN model for histopathologic cancer detection"
authors = [
    {name = "Marco Santos"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pillow (>=11.1.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
